ibuilder/tests/not_compile/invalid_field_type.stderr
error[E0277]: the trait bound `&'static str: NewBuildableValue` is not satisfied
 --> $DIR/invalid_field_type.rs:3:10
  |
3 | #[derive(IBuilder)]
  |          ^^^^^^^^ the trait `NewBuildableValue` is not implemented for `&'static str`
  |
  = note: required by `new_buildable_value`
  = note: this error originates in the derive macro `IBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)
